--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>React JS</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
-    integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href="../dist/app/bundle.css">
   </head>
   <body>
-    <div class="" id="root">
+    <div id="root">
     </div>
-    <script type="text/javascript" src="../dist/app/bundel.js">
+
+    <script type="text/javascript" src="../dist/app/app.js">
+
+    </script>
+    <script type="text/javascript" src="../dist/app/bundle.js">
 
     </script>
   </body>
